[project]
name = "ephemeral-preview-tap"
version = "0.1.0"
description = "A lightweight IMAGE preview tap node that sends an in-memory JPEG contact sheet without writing temporary preview files."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "ruminar" }
]

[project.urls]
Repository = "https://github.com/ruminar/ComfyUI-EphemeralPreviewTap"
"Bug Tracker" = "https://github.com/ruminar/ComfyUI-EphemeralPreviewTap/issues"

[tool.comfy]
PublisherId = "ruminar"
DisplayName = "Ephemeral Preview Tap"
Icon = ""
